# softwareeng

./: .gitignore  README.md  pyproject.toml
src/: audio_output.py  image processor.py  image_processor.py  logger.py  main.py  path_selection.py  visualizer.py  webcam.py
