[tool.poetry]
name = "softwareeng"
version = "0.1.0"
description = "Detection of shapes and colours in images"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-contrib-python = "^4.8.1.78"
pandas = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
