[tool.poetry]
name = "softwareeng"
version = "0.1.0"
description = "Detection of shapes and colours in images"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gtts = "^2.4.0"
playsound = "^1.3.0"
pyttsx3 = "^2.90"
opencv-python = "^4.8.1.78"
pandas = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
